--- a/frontend/src/styles/HomeSections/HeroSection.css
+++ b/frontend/src/styles/HomeSections/HeroSection.css
@@ -1,13 +1,31 @@
 .herosec-wrapper {
     width: 100%;
-    margin-top: 5%; 
+    height: 100vh;
+    margin-top: 5%;
+
 }
 
-.herosec-content{
-    position: absolute;
-    top: 40%;
+.slider1 {
+    width: 100%;
+    height: 100vh;
+    background: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/carousel/15/slide-2-background__86858.jpg?c=2);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
 }
-.herosec-btn{
+
+.slider2 {
+    width: 100%;
+    height: 100vh;
+    background: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/carousel/9/slide-1-background.jpg?c=2);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.herosec-btn {
     margin-top: 70px;
     color: white;
     background-color: #000;
@@ -18,8 +36,139 @@
     letter-spacing: 2px;
 
 }
-.herosec-btn:hover{
+
+.herosec-h1 {
+    font-size: 60px;
+    color: white
+}
+
+.herosec-p {
+    font-weight: 700;
+    color: RGB(176, 151, 109)
+}
+
+.herosec-btn:hover {
     background-color: #b0976d;
     transition: all 0.5s;
     border: none;
+}
+
+.herosec-first__slide {
+    background-image: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/carousel/15/slide-2-background__86858.jpg?c=2);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media screen and (max-width: 992px) {
+    .herosec-p {
+        font-size: 12px;
+    }
+
+    .herosec-h1 {
+        font-size: 45px;
+    }
+
+    .herosec-btn {
+        padding: 10px 30px;
+        margin-top: 50px;
+        color: white;
+        background-color: #000;
+        font-weight: 500;
+        border: none;
+        letter-spacing: 2px;
+    }
+
+    
+}
+
+@media screen and (max-width: 768px) {
+    .hero-swiper {
+        height: 80vh;
+    }
+
+    .herosec-wrapper {
+        height: 80vh;
+    }
+
+    .herosec-btn {
+        margin-top: 20px;
+    }
+
+   
+}
+
+@media screen and (max-width: 640px) {
+    .hero-swiper {
+        height: 60vh;
+    }
+
+    .herosec-wrapper {
+        height: 60vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .herosec-p {
+        font-size: 12px;
+    }
+
+    .herosec-h1 {
+        font-size: 2em;
+    }
+
+    .hero-content {
+        margin-bottom: 30%;
+    }
+
+    .herosec-btn {
+        padding: 8px 25px;
+        color: white;
+        background-color: #000;
+        font-weight: 400;
+        border: none;
+        letter-spacing: 2px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .herosec-p {
+        font-size: 12px;
+    }
+
+    .herosec-h1 {
+        font-size: 2em;
+    }
+
+    .herosec-btn {
+        padding: 8px 25px;
+        margin-top: 30px;
+        color: white;
+        background-color: #000;
+        font-weight: 400;
+        border: none;
+        letter-spacing: 2px;
+    }
+
+
+}
+
+@media screen and (max-width: 400px) {
+    .herosec-p {
+        font-size: 12px;
+    }
+
+    .herosec-h1 {
+        font-size: 20px;
+    }
+
+    .herosec-btn {
+        padding: 5px 15px;
+        margin-top: 20px;
+        color: white;
+        background-color: #000;
+        font-weight: 400;
+        border: none;
+        letter-spacing: 2px;
+    }
 }
