--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -1,9 +1,123 @@
 .footer-wrapper {
     width: 100%;
-    /* height: 100vh; */
 }
 
-.footer-banners {
+.footer-main {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
+.footer-content {
+    width: 100%;
+    padding: 80px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #121212;
+}
+
+.footer-content__left {
+    display: flex;
+    justify-content: flex-start;
+    gap: 15px;
+}
+
+.footer-p {
+    font-size: 14px;
+    font-weight: 700;
+    color: RGB(176, 151, 109)
+}
+
+.footer-h2 {
+    font-size: 41px;
+    color: white;
+}
+
+.footer-link__wrapper {
+    display: flex;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: RGB(65, 65, 65);
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.footer-link:hover {
+    color: RGB(65, 65, 65);
+
+}
+
+.footer-content__right {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.footer-bottom i {
+    font-size: 2em;
+}
+
+@media screen and (max-width: 800px) {
+    .footer-main {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .footer-link__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .footer-content__left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .footer-content__right {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .footer-h2{
+        font-size: 2em;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .footer-banners {
     width: 100%;
 }
 
@@ -14,17 +128,17 @@
     filter: brightness(40%);
     height: 370px;
     cursor: pointer;
-}
+} */
 
-.footer-left__pic {
+/* .footer-left__pic {
     background-image: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/uploaded_images/blog-post-2.jpg?t=1489066586);
 }
 
 .footer-right__pic {
     background-image: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/uploaded_images/blog-post-1.jpg?t=1489066679);
-}
+} */
 
-.card-text {
+/* .card-text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -35,58 +149,13 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-}
+} */
 
-.hov:hover .footer-img__wrapper {
+/* .hov:hover .footer-img__wrapper {
     opacity: 0.8;
     transition: all 0.6s;
-}
+} */
 
-.hov:hover .card-text {
+/* .hov:hover .card-text {
     transform: translate(-50%, -80%);
-}
-
-
-.footer-content {
-   width: 100%;
-   height: 60vh;
-   padding: 80px 0;
-   text-align: center;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   background-color: #121212;
-}
-
-.footer-content__left{
-    display: flex;
-    justify-content: flex-start;
-    gap: 15px;
-}
-
-.footer-link{
-    text-decoration: none ;
-    color: RGB(65, 65, 65);
-    font-size: 12px;
-    font-weight: 700;
-}
-
-.footer-link:hover{
-    color: RGB(65, 65, 65);
-
-}
-
-.footer-content__right{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.footer-bottom{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-}
-
-.footer-bottom i{
-    font-size: 2em;
-}
+} */
