--- a/frontend/src/styles/BlogPages/BlogPages.css
+++ b/frontend/src/styles/BlogPages/BlogPages.css
@@ -1,6 +1,5 @@
 .blog-pages__top {
     width: 100%;
-    /* margin-top: 8%; */
     height: 40vh;
     background-color: black;
     display: flex;
@@ -12,7 +11,6 @@
 
 .blog-pages__wrapper {
     width: 60%;
-    /* height: 100vh; */
     margin: 50px auto 100px auto;
 }
 
@@ -59,14 +57,6 @@
     }
 }
 
-
-
-
-/* @media screen and (max-width: 800px) {
-    .blog-wrapper {
-        width: 90%;
-    }
-} */
 @media screen and (max-width: 700px) {
       .blog-pages__wrapper {
         width: 95%;
@@ -91,10 +81,6 @@
     .blog-pages__wrapper {
         width: 90%;
     }
-
-    /* .blog-link {
-        font-size: 2em;
-    }  */
 }
 
 @media screen and (max-width: 349px) {
@@ -102,4 +88,8 @@
      .blog-pages__top {
         margin-top: 25%;
     } 
+
+    .blog-pages__link{
+        font-size: 2em;
+    }
 }
