--- a/frontend/src/styles/HomeSections/FeaturedProducts.css
+++ b/frontend/src/styles/HomeSections/FeaturedProducts.css
@@ -1,3 +1,11 @@
+img{
+    max-width: 100%;
+}
+.card-wrapper{
+    padding: 0 !important;
+    
+}
+
 .featured-products__wrapper {
     padding: 150px 0;
     background-color: white
@@ -7,11 +15,12 @@
     position: relative;
     width: 350px;
     height: 500px;
-    margin: 20px;
     overflow: hidden;
     object-fit: cover;
     background: #F2F2F2;
     border: none;
+    margin: 0 auto ;
+
 }
 
 .card-body {
@@ -30,14 +39,13 @@
 .card-content__f{
     position: relative;
     width: 350px;
-    margin: 20px;
     overflow: hidden;
     object-fit: cover;
     text-align: center;
     padding: 15px 0;
     background-color: #fff;
     background: #F2F2F2;
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
+    margin: 20px auto;
 }
 
 .card-button {
