--- a/frontend/src/styles/HomeSections/LatestCollecions.css
+++ b/frontend/src/styles/HomeSections/LatestCollecions.css
@@ -1,41 +1,38 @@
 .latest-collections__wrapper {
-    padding: 150px 0;
+    padding: 250px 0;
     background-color: #F2F2F2
+}
+
+.card-wrapper {
+    width: 100%;
+    padding: 20px;
 }
 
 .card {
     position: relative;
-    width: 350px;
-    height: 500px;
-    margin: 20px;
+    margin: 20px 0;
     overflow: hidden;
-    object-fit: cover;
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
+    width: 100%;
+    height: 450px;
+
+}
+
+.card img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .card-body {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+
+    padding: 50px;
 }
 
-.card-content{
-    position: relative;
-    width: 350px;
-    margin: 20px;
-    overflow: hidden;
-    object-fit: cover;
+.card-content {
     text-align: center;
     padding: 15px 0;
     background-color: #fff;
-    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
+
 }
 
 .card-button {
@@ -65,17 +62,18 @@
     border: none;
 }
 
-.card-link{
-    font-size:20px;
-    color:black;
+.card-link {
+    font-size: 20px;
+    color: black;
     text-decoration: none;
 }
 
-.card-link:hover{
+.card-link:hover {
     color: RGB(176, 151, 109);
     transition: all 0.6s;
 }
-.add-button{
+
+.add-button {
     color: white;
     background-color: #000;
     font-weight: 700;
@@ -85,8 +83,34 @@
     letter-spacing: 2px;
     width: 80%;
 }
-.add-button:hover{
+
+.add-button:hover {
     background-color: #b0976d;
     transition: all 0.5s;
     border: none;
+}
+
+
+.feature-fav__btn {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background: #fff;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    border: none;
+    transition: 0.3s ease;
+
+}
+
+.feature-fav__btn:active {
+    transform: scale(1.2);
+}
+
+.feature-fav__btn:hover{
+    color: white;
+    background-color: #b0976d;
+
 }
