--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -27,7 +27,6 @@
     border-radius: 10px;
   }
 
-
 .navbar-wrapper {
     position: fixed;
     top: 0;
@@ -40,7 +39,6 @@
     z-index: 100;
  
 }
-
 
 .navbar-large {
     padding: 20px 0;
@@ -96,6 +94,7 @@
 
 .search-menu {
     width: 100vw;
+    /* height: 200vh; */
     padding: 100px 0;
 }
 
@@ -157,6 +156,50 @@
 
 .burger-dropmenu {
     width: 100vw;
+}
+
+
+/* search card */
+.search-card__wrapper{
+    padding: 0 !important;
+    
+}
+
+.search-card__f {
+    position: relative;
+    width: 270px;
+    height: 370px;
+    overflow: hidden;
+    object-fit: cover;
+    background: #F2F2F2;
+    border: none;
+    margin: 0 auto ;
+
+}
+
+.search-card__body {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.searchCard-content__f{
+    position: relative;
+    width: 270px;
+    overflow: hidden;
+    object-fit: cover;
+    text-align: center;
+    padding: 15px 0;
+    background-color: #fff;
+    background: #F2F2F2;
+    margin: 20px auto;
 }
 
 
