--- a/frontend/src/pages/Admin/AdminStyles/FeaturedAdmin.css
+++ b/frontend/src/pages/Admin/AdminStyles/FeaturedAdmin.css
@@ -53,7 +53,7 @@
     align-items: center;
     justify-content: space-around;
     padding: 50px 0;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
     /* border: 1px solid red; */
     
 
