--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,3 +1,29 @@
+.hide-searchbox{
+    height: 0;
+    overflow: hidden;
+    transition: all 0.5s;
+}
+.show-searchboxfull{
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    transition: all 0.5s;
+}
+.show-searchbox{
+    height: 30vh;
+    overflow-x: hidden;
+    transition: all 0.5s;
+    border-bottom: 1px solid RGB(176, 151, 109);
+}
+.show-searchboxfull::-webkit-scrollbar {
+    width: 3px;
+}
+
+.show-searchboxfull::-webkit-scrollbar-thumb {
+    background: #b30000; 
+    border-radius: 10px;
+  }
+
 .hide-lightbox {
     height: 0;
     overflow: hidden;
@@ -14,8 +40,7 @@
     top: 7vh;
     left: 0;
     overflow-y: scroll;
-    padding: 0 50px;
-    
+    padding: 0 50px; 
 }
 
 .show-lightbox::-webkit-scrollbar {
@@ -37,15 +62,14 @@
     padding: 20px 0;
     transition: padding 0.3s;
     z-index: 100;
- 
 }
 
 .navbar-large {
-    padding: 20px 0;
+    padding: 20px 0 0;
 }
 
 .navbar-small {
-    padding: 5px 0;
+    padding: 5px 0 0;
 }
 
 .navbar-inner {
@@ -85,7 +109,6 @@
 
 .dropdown-li {
     background: none;
-
 }
 
 .nav-user {
@@ -93,7 +116,6 @@
 }
 
 .search-menu {
-    width: 100vw;
     padding: 50px 0;
 }
 
@@ -157,7 +179,6 @@
     width: 100vw;
 }
 
-
 /* search card */
 .search-card__wrapper{
     padding: 0 !important;
@@ -216,6 +237,7 @@
 }
 
 @media screen and (max-width: 992px) {
+
     .nav-pages {
         display: none;
     }
@@ -224,7 +246,6 @@
         display: block;
     }
 }
-
 
 @media screen and (max-width: 350px) {
 
@@ -250,5 +271,4 @@
         align-items: center;
         padding: 0 0 0 25px;
     }
-
 }
