--- a/frontend/src/styles/Wishlist.css
+++ b/frontend/src/styles/Wishlist.css
@@ -1,20 +1,54 @@
-.wishlist-card {
+.wish-top {
+    width: 100%;
+    height: 40vh;
+    background-color: black;
     display: flex;
-    align-items: flex-start;
-    margin-bottom: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 6%;
+}
+
+.wish-top__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.wish-card__wrapper {
+    margin: 100px 0;
+}
+
+
+@media screen and (max-width: 1100px) {
+    .wish-top {
+        padding-top: 10%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .wish-top {
+        padding-top:8%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .wish-top {
+        padding-top:9%;
+    }
+}
+
+@media screen and (max-width: 567px) {
+
+    .wish-top {
+        padding-top: 13%;
+    }
 
 }
 
-.wish-img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-}
+@media screen and (max-width: 349px) {
 
-.product-info {
-    margin-left: 20px;
-}
-
-#Wishlist{
-    margin-top: 300px;
+    .wish-top {
+        margin-top: 25%;
+    }
 }
