--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -36,7 +36,7 @@
 .show-lightbox {
     background-color: #121212;
     color: #fff;
-    height: 93vh;
+    height: 80vh;
     width: 100%;
     transition: all 0.5s;
     position: absolute;
@@ -166,7 +166,7 @@
 }
 
 .nav-burger_ul {
-    height: 300px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -240,6 +240,18 @@
     letter-spacing: 2px;
 }
 
+.cart-number{
+    position: relative;
+    right: 6%;
+}
+
+@media screen and (min-width: 991px) {
+
+    .show-lightbox{
+        display: none;
+    }
+}
+
 @media screen and (max-width: 992px) {
 
     .nav-pages {
@@ -248,6 +260,9 @@
 
     .nav-burger {
         display: block;
+    }
+    .show-lightbox{
+       top: 8vh;
     }
 }
 
@@ -274,5 +289,14 @@
         justify-content: center;
         align-items: center;
         padding: 0 0 0 25px;
+    }
+
+    .cart-number{
+        /* left: 5px; */
+        bottom: 20%;
+    }
+
+    .show-lightbox{
+        top: 16vh;
     }
 }
