--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -187,7 +187,6 @@
 .search-card__wrapper {
     padding: 0 !important;
     margin-bottom: 20px;
-
 }
 
 .search-card__f {
@@ -240,14 +239,19 @@
     letter-spacing: 2px;
 }
 
-.cart-number{
+.search__add-button:hover {
+    background-color: #b0976d;
+    border: none;
+}
+
+.cart-number {
     position: relative;
     right: 6%;
 }
 
 @media screen and (min-width: 991px) {
 
-    .show-lightbox{
+    .show-lightbox {
         display: none;
     }
 }
@@ -261,8 +265,9 @@
     .nav-burger {
         display: block;
     }
-    .show-lightbox{
-       top: 8vh;
+
+    .show-lightbox {
+        top: 8vh;
     }
 }
 
@@ -291,12 +296,12 @@
         padding: 0 0 0 25px;
     }
 
-    .cart-number{
+    .cart-number {
         /* left: 5px; */
         bottom: 20%;
     }
 
-    .show-lightbox{
+    .show-lightbox {
         top: 16vh;
     }
 }
