--- a/frontend/src/styles/ShopWines/WhiteWines.css
+++ b/frontend/src/styles/ShopWines/WhiteWines.css
@@ -20,20 +20,23 @@
     margin-top: 2%;
 }
 
-.white-top__article {
-    font-size: 14px;
-}
-
 .white-content__wrapper {
     margin: 100px auto;
 }
 
-.wcard-wrapper {
+.white-card__wrapper {
     padding: 0 !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 65%;
+    /* border: 1px solid red; */
+
+
 
 }
 
-.card-w {
+.card-white {
     position: relative;
     width: 380px;
     height: 450px;
@@ -45,7 +48,7 @@
 
 }
 
-.wCard-body {
+.whiteCard-body {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -58,7 +61,7 @@
     padding: 20px;
 }
 
-.card-content__w {
+.card-content__white {
     position: relative;
     width: 380px;
     overflow: hidden;
@@ -70,134 +73,197 @@
     margin: 20px auto;
 }
 
-.white-filter__wrapper{
+.white-filter__wrapper {
     width: 30%;
-    border: 2px solid black;
-}
-
-.white-card__wrapper{
-    width: 65%;
-}
-
-.white-banner{
-    width: 100%;
-    height: 350px;
+    height: 50%;
+    border: 2px solid #e6e6e6;
     display: flex;
-    justify-content: center;
-    
-}
-
-.white-cards{
-    margin-top: 30px ;
+    flex-direction: column;
+    align-items: center;
 }
 
 
+.cards {
+    margin-bottom: 50px;
+}
+
+.shop-wines {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.border-line {
+    border: 3px solid #e6e6e6;
+    width: 100%;
+    margin: 10px auto 25px auto;
+    border-radius: 5px;
+}
+
+.shop-wines__links {
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.shop-link {
+    text-decoration: none;
+    color: RGB(176, 151, 109);
+}
+
+.shop-link:hover {
+    color: RGB(176, 151, 109);
+}
+
+.filter-box {
+    border-bottom: 2px solid #e6e6e6;
+    width: 100%;
+    padding: 40px;
+}
+
+.brand {
+    margin-top: 50px;
+}
+
+.item-h5 {
+    cursor: pointer;
+}
+
+.filter-item {
+    margin-bottom: 30px;
+}
+
+.filter-reset__btn {
+    width: 100%;
+    border: 2px solid black;
+    background: none;
+    padding: 15px 0;
+    font-weight: 600;
+}
+
+.filter-reset__btn:hover {
+    border: 2px solid RGB(176, 151, 109);
+    color: RGB(176, 151, 109);
+    transition: white 0.3s;
+}
+
+.price-input {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #e6e6e6;
+}
+
+.filter-input[type=checkbox] {
+    margin-right: 5px;
+    border-radius: 0;
+}
+
+.plus {
+    color: black;
+}
+
+.minus {
+    color: RGB(176, 151, 109);
+}
+
+.appelation {
+
+    margin-bottom: 20px;
+    font-size: 20px;
+}
 
 
 @media screen and (max-width: 1200px) {
-    .white-wrapper {
-        width: 95%;
-    }
-
-    .w-wines__top {
-        height: 55vh;
-        padding-top: 13%;
-        padding-bottom: 2%;
-
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .card-w {
+    .card-white {
         width: 300px;
         height: 450px;
     }
 
-    .card-content__w {
+    .card-content__white {
         width: 300px;
     }
 
     .white-content__wrapper {
-        gap: 10px;
-    }
-
-    .wCard-common__wrapper {
         gap: 10px;
     }
 }
 
 @media screen and (max-width: 992px) {
-    .card-w {
-        width: 230px;
-        height: 270px;
-    }
-
-    .card-content__w {
-        width: 230px;
-    }
-
     .white-content__wrapper {
-        gap: 10px;
-    }
-
-    .wCard-common__wrapper {
-        gap: 10px;
-    }
-
-
-}
-
-@media screen and (max-width: 800px) {
-    .card-w {
-        width: 350px;
-        height: 500px;
-    }
-
-    .card-content__w {
-        width: 350px;
-    }
-
-    .white-content__wrapper{
         display: flex;
         flex-direction: column;
     }
 
-    .filter-wrapper{
+    .white-filter__wrapper {
         width: 100%;
     }
 
+    .white-card__wrapper {
+        width: 100%;
+    }
 
+    .filter-box {
+        padding: 20px;
+    }
+
+    .filter-item {
+        border-top: 1px solid #e6e6e6;
+        width: 100%;
+        margin: 0;
+        padding: 10px 0;
+    }
+
+    .shop-wines {
+        border: none;
+    }
+
+    .white-card__wrapper {
+        margin-top: 20px;
+    }
 }
 
 @media screen and (max-width: 768px) {
-    .card-w {
-        width: 320px;
-        height: 450px;
+
+    .white-top__wrapper {
+        padding-top: 5%;
+
     }
 
-    .card-content__w {
-        width: 320px;
+    .card-white {
+        width: 250px;
+        height: 420px;
     }
 
-    .white-content__wrapper{
+    .card-content__white {
+        width: 250px;
+    }
+
+    .white-content__wrapper {
         display: flex;
         flex-direction: column;
     }
 
-    .filter-wrapper{
+    .filter-wrapper {
         width: 100%;
+    }
+
+    .appelation {
+
+        margin-bottom: 20px;
+        font-size: 16px;
     }
 
 
 }
 
 @media screen and (max-width: 700px) {
-    .white-wrapper {
-        width: 95%;
-    }
+
 
     .white-top {
-        padding-top: 20%;
+        padding-top: 12%;
 
     }
 }
@@ -208,23 +274,56 @@
         display: none;
     }
 
-    .white-top {
-        padding-top: 25%;
-
+    .white-top__wrapper {
+        padding-top: 12%;
     }
 
-    .white-wrapper {
-        width: 90%;
+    .cards {
+        width: 100%;
     }
 
-    .white-link {
-        font-size: 2em;
+    .card-white {
+        width: 380px;
+        height: 450px;
+    }
+
+    .card-content__white {
+        width: 380px;
     }
 }
 
-@media screen and (max-width: 349px) {
+@media screen and (max-width: 400px) {
 
     .white-top {
-        margin-top: 25%;
+        padding-top: 22%;
+    }
+
+    .card-white {
+        width: 300px;
+        height: 400px;
+    }
+
+    .card-content__white {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+
+    .white-top__wrapper {
+        padding-top: 30%;
+    }
+
+    .white-top__article{
+        display: none;
+    }
+
+    .card-white {
+        width: 275px;
+        height: 350px;
+    }
+
+    .card-content__white {
+        width: 275px;
     }
 }
