--- a/frontend/src/styles/HomeSections/HeroSection.css
+++ b/frontend/src/styles/HomeSections/HeroSection.css
@@ -4,6 +4,15 @@
     margin-top: 5%;
 }
 
+.hero-link{
+    text-decoration: none;
+    color: white;
+}
+
+.hero-link:hover{
+    color: white;
+}
+
 .slider1 {
     width: 100%;
     height: 100vh;
