--- a/frontend/src/styles/Wishlist.css
+++ b/frontend/src/styles/Wishlist.css
@@ -99,7 +99,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content:flex-end;
     align-items: flex-end;
     gap: 20px;
     margin: 50px 0;
