--- a/frontend/src/styles/HomeSections/HeroSection.css
+++ b/frontend/src/styles/HomeSections/HeroSection.css
@@ -15,10 +15,7 @@
 
 .slider1 {
     width: 100%;
-    /* height: 100vh; */
-    /* background: url(https://cdn11.bigcommerce.com/s-qbep6rt4nh/images/stencil/original/carousel/15/slide-2-background__86858.jpg?c=2);
-    background-repeat: no-repeat;
-    background-size: cover; */
+    height: 100vh;
     display: flex;
     align-items: center;
     position: relative;
@@ -26,13 +23,12 @@
 
 .hero-text {
     position: absolute;
+    height: 100vh;
     width: 40%;
     top: 30%;
     left: 8%;
     transform: translate(-30%, 0, 0, -8%);
 }
-
-
 
 .slider2 {
     width: 100%;
@@ -91,7 +87,7 @@
     }
 }
 
-@media screen and (max-width: 1137px) {
+/* @media screen and (max-width: 1137px) {
 
     .hero-swiper {
         height: 100vh;
@@ -101,7 +97,7 @@
         position: absolute;
         top: 25%;
     }
-}
+} */
 
 @media screen and (max-width: 992px) {
     .herosec-p {
