--- a/frontend/src/pages/Admin/AdminStyles/FeaturedAdmin.css
+++ b/frontend/src/pages/Admin/AdminStyles/FeaturedAdmin.css
@@ -31,18 +31,14 @@
 .update-btn:hover {
     background-color: rgb(152, 121, 7);
     transition: all 0.3s;
-
 }
 
 .featured-add__wrapper {
-    /* height: 80vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 150px auto;
-    /* border: 1px solid red; */
-
 }
 
 .add-form {
@@ -53,11 +49,6 @@
     align-items: center;
     justify-content: space-around;
     padding: 50px 0;
-    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
-    /* border: 1px solid red; */
-    
-
-
 }
 
 .add-products__h2{
@@ -77,6 +68,7 @@
     color: white;
     border-radius: 10px;
     width: 20%;
+    margin:8px 0 ;
 }
 
 .add-btn:hover {
