--- a/frontend/src/styles/HomeSections/FeaturedProducts.css
+++ b/frontend/src/styles/HomeSections/FeaturedProducts.css
@@ -121,3 +121,21 @@ img {
 .swiper-button-next {
     color: #b0976d;
 }
+
+
+@media screen and (max-width: 1200px) {
+
+    .card-f {
+        width: 300px;
+        height: 450px;
+    }
+
+    .card-content__f {
+        width: 300px;
+    }
+
+    .add-link{
+        width: 100%;
+    }
+
+}
