--- a/frontend/src/styles/HomeSections/HeroSection.css
+++ b/frontend/src/styles/HomeSections/HeroSection.css
@@ -1,6 +1,6 @@
 .herosec-wrapper {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     margin-top: 5%;
 }
 
@@ -15,7 +15,7 @@
 
 .slider1 {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     position: relative;
@@ -77,47 +77,38 @@
     background-size: cover;
 }
 
+
+
 @media screen and (max-width: 1200px) {
 
     .hero-text {
         position: absolute;
-        top: 25%;
+        top: 30%;
         left: 12%;
         transform: translate(-25%, 0, 0, -12%);
     }
 }
 
-/* @media screen and (max-width: 1137px) {
-
-    .hero-swiper {
-        height: 100vh;
-    }
-
-    .hero-text {
-        position: absolute;
-        top: 25%;
-    }
-} */
-
 @media screen and (max-width: 992px) {
+
     .herosec-p {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .herosec-h1 {
-        font-size: 45px;
+        font-size: 50px;
     }
 
     .hero-text {
         position: absolute;
-        top: 35%;
+        top: 30%;
         left: 12%;
         transform: translate(-30%, 0, 0, -8%);
         width: 60%;
     }
 
     .herosec-btn {
-        padding: 10px 30px;
+        padding: 20px 40px;
         margin-top: 50px;
         color: white;
         background-color: #000;
@@ -128,31 +119,18 @@
 }
 
 @media screen and (max-width: 768px) {
-    .hero-swiper {
-        height: 80vh;
+
+    .herosec-p {
+        font-size: 12px;
     }
 
-    .herosec-wrapper {
-        height: 80vh;
-    }
-
-    .herosec-btn {
-        margin-top: 20px;
+    .herosec-h1 {
+        font-size: 2em;
     }
 }
 
 @media screen and (max-width: 640px) {
-    .hero-swiper {
-        height: 60vh;
-    }
-
-    .herosec-wrapper {
-        height: 60vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
+  
     .herosec-p {
         font-size: 12px;
     }
@@ -166,12 +144,7 @@
     }
 
     .herosec-btn {
-        padding: 8px 25px;
-        color: white;
-        background-color: #000;
-        font-weight: 400;
-        border: none;
-        letter-spacing: 2px;
+        margin-top: 20px;
     }
 }
 
@@ -181,7 +154,7 @@
     }
 
     .herosec-h1 {
-        font-size: 2em;
+        font-size: 25px;
     }
 
     .herosec-btn {
@@ -194,29 +167,56 @@
         letter-spacing: 2px;
     }
 
-    .hero-text{
+    .hero-text {
         width: 60%;
     }
 }
 
-@media screen and (max-width: 461px) {
-    .hero-text{
+@media screen and (max-width: 500px) {
+    .herosec-p {
+        font-size: 12px;
+        margin-top: 10px;
+    }
+
+    .herosec-h1 {
+        font-size: 25px;
+    }
+
+    .herosec-btn {
+        margin-top: 20px;
+    }
+
+    .hero-text {
         width: 60%;
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
+    .hero-text {
+        width: 60%;
+    }
+
+    .herosec-p{
+        margin-top: 10px;
+    }
+
+    .herosec-h1{
+        margin-top: -10px;
+    }
+}
+
+@media screen and (max-width: 416px) {
     .herosec-p {
         font-size: 12px;
     }
 
     .herosec-h1 {
-        font-size: 20px;
+        font-size: 16px;
     }
 
     .herosec-btn {
         padding: 5px 15px;
-        margin-top: 20px;
+        margin-top: 15px;
         color: white;
         background-color: #000;
         font-weight: 400;
@@ -224,15 +224,19 @@
         letter-spacing: 2px;
     }
 
-    .hero-text{
-        top: 40%;
+    .hero-text {
+        top: 35%;
         width: 60%;
     }
 }
 
 @media screen and (max-width: 350px) {
-    .hero-text{
-        top: 45%;
+
+    .herosec-wrapper{
+        padding-top: 25%;
+    }
+    .hero-text {
+        top: 25%;
         width: 60%;
     }
 }
