--- a/frontend/src/styles/HomeSections/LatestCollecions.css
+++ b/frontend/src/styles/HomeSections/LatestCollecions.css
@@ -1,5 +1,5 @@
 .latest-collections__wrapper {
-    padding: 250px 0;
+    padding: 150px 0;
     background-color: #F2F2F2
 }
 
@@ -66,7 +66,7 @@
     font-size: 20px;
     color: black;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .card-link:hover {
@@ -110,8 +110,28 @@
     transform: scale(1.2);
 }
 
-.feature-fav__btn:hover{
+.feature-fav__btn:hover {
     color: white;
     background-color: #b0976d;
 
+}
+
+@media screen and (max-width:1200px) {
+    .card-link{
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .card-wrapper{
+        width: 80%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .card-wrapper{
+        width: 85%;
+        margin: 0 auto;
+    }
 }
