--- a/frontend/src/styles/ShopWines/AllShopWines.css
+++ b/frontend/src/styles/ShopWines/AllShopWines.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 7%;
+    padding-top: 8%;
 }
 
 .all-top__wrapper {
@@ -14,7 +14,6 @@
     flex-direction: column;
     align-items: center
 }
-
 
 .all-content__wrapper {
     margin: 100px auto;
@@ -36,7 +35,6 @@
     background: #F2F2F2;
     border: none;
     margin: 0 auto;
-
 }
 
 .allCard-body {
@@ -72,7 +70,6 @@
     flex-direction: column;
     align-items: center;
 }
-
 
 .cards {
     margin-bottom: 50px;
@@ -166,6 +163,22 @@
     font-size: 20px;
 }
 
+@media screen and (max-width: 1400px) {
+
+    .all-top{
+        padding-top: 8%
+    }
+
+    .card-all {
+        width: 300px;
+        height: 420px;
+    }
+
+    .card-content__all {
+        width: 300px;
+    }
+
+}
 
 @media screen and (max-width: 1200px) {
     .card-all {
@@ -214,6 +227,7 @@
     .all-card__wrapper {
         margin-top: 20px;
     }
+
 }
 
 @media screen and (max-width: 768px) {
