--- a/frontend/src/styles/ShopWines/RoseWines.css
+++ b/frontend/src/styles/ShopWines/RoseWines.css
@@ -167,7 +167,22 @@
     font-size: 20px;
 }
 
+@media screen and (max-width: 1400px) {
 
+    .rose-top {
+        padding-top: 8%
+    }
+
+    .card-rose {
+        width: 300px;
+        height: 420px;
+    }
+
+    .card-content__rose {
+        width: 300px;
+    }
+
+}
 
 @media screen and (max-width: 1200px) {
     .card-rose {
