--- a/frontend/src/styles/ShopWines/WhiteWines.css
+++ b/frontend/src/styles/ShopWines/WhiteWines.css
@@ -173,6 +173,22 @@
     font-size: 20px;
 }
 
+@media screen and (max-width: 1400px) {
+
+    .white-top {
+        padding-top: 8%
+    }
+
+    .card-white {
+        width: 300px;
+        height: 420px;
+    }
+
+    .card-content__white {
+        width: 300px;
+    }
+
+}
 
 @media screen and (max-width: 1200px) {
     .card-white {
