--- a/frontend/src/styles/Wishlist.css
+++ b/frontend/src/styles/Wishlist.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 6%;
+    padding-top: 8%;
 }
 
 .wish-top__wrapper {
@@ -99,7 +99,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content:flex-end;
+    justify-content: flex-end;
     align-items: flex-end;
     gap: 20px;
     margin: 50px 0;
@@ -134,6 +134,12 @@
 }
 
 
+@media screen and (max-width: 1400px) {
+    .wish-top {
+        padding-top: 10%;
+    }
+}
+
 
 @media screen and (max-width: 1100px) {
     .wish-top {
@@ -152,6 +158,7 @@
         padding-top: 9%;
     }
 }
+
 
 @media screen and (max-width: 567px) {
 
