--- a/frontend/src/styles/Wishlist.css
+++ b/frontend/src/styles/Wishlist.css
@@ -23,6 +23,7 @@
 .cart-th {
     font-weight: 600;
     padding: 20px 0;
+    border-bottom: 2px solid #f2f2f2;
 
 }
 
@@ -118,7 +119,6 @@
 }
 
 .payment-btn {
-    /* margin-top: 70px; */
     color: white;
     background-color: #000;
     font-weight: 700;
