--- a/frontend/src/styles/HomeSections/FeaturedProducts.css
+++ b/frontend/src/styles/HomeSections/FeaturedProducts.css
@@ -79,6 +79,7 @@ img {
     font-size: 20px;
     color: black;
     text-decoration: none;
+    font-weight: 500;
 }
 
 .card-link:hover {
@@ -137,5 +138,4 @@ img {
     .add-link{
         width: 100%;
     }
-
 }
